<resources>
    <string name="app_name">CosyMusic</string>
    <string name="test" translatable="false">测试</string>
    <string name="my" translatable="false">我的</string>
    <string name="discover">发现</string>
    <string name="menu">菜单</string>
    <string name="search">搜索</string>
    <string name="setting">设置</string>
    <string name="back">返回</string>
    <string name="feedback">反馈</string>
    <string name="praise">赞赏</string>
    <string name="about">关于</string>
    <string name="local">本地</string>
    <string name="cloud_drive">云盘</string>
    <string name="like">喜欢</string>
    <string name="history">历史</string>
    <string name="rank_list">排行榜</string>
    <string name="recommended_music_menu">歌单推荐</string>
    <string name="new_song_express">新歌速递</string>
    <string name="hot_search">热门搜索</string>
    <string name="play_controller">播放管理器</string>
    <string name="play_history">播放历史</string>
    <string name="clear_play_history">清空播放历史</string>
    <string name="search_history">搜索历史</string>
    <string name="chinese_song">华语</string>
    <string name="eu_am">欧美</string>
    <string name="korea">韩国</string>
    <string name="japan">日本</string>
    <string name="more">更多</string>
    <string name="song_menu">歌单</string>
    <string name="play_all">播放全部(%d)</string>
    <string name="play_list_num">播放列表(%d)</string>
    <string name="next_song_to_play">下一首播放</string>
    <string name="add_to_my_favor">添加到我喜欢</string>
    <string name="music_info">歌曲信息</string>
    <string name="remove_this_song">移除这首歌</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="my_love">我喜欢</string>
    <string name="my_love_desc">收藏你喜欢的音乐</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="cache">缓存</string>
    <string name="image_cache">图片缓存</string>
    <string name="clear_image_cache">清除图片缓存</string>
    <string name="translation">翻译</string>
    <string name="singer">歌手</string>
    <string name="single_song">单曲</string>
    <string name="album">专辑</string>
    <string name="mv">MV</string>
    <string name="detail">详情</string>
    <string name="brief_introduction">简要介绍</string>
    <string name="detailed_introduction">详细介绍</string>
</resources>