<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_slide_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llNextSong"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start|center_vertical"
                android:text="@string/next_song_to_play"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end|center_vertical"
                android:padding="6dp"
                app:srcCompat="@drawable/ic_enter" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAddFavor"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAddFavor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_weight="1"
                android:text="@string/add_to_my_favor"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end|center_vertical"
                android:padding="6dp"
                app:srcCompat="@drawable/ic_enter" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMusicInfo"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start|center_vertical"
                android:text="@string/music_info"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end|center_vertical"
                android:padding="6dp"
                app:srcCompat="@drawable/ic_enter" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDeleteMusic"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="start|center_vertical"
                android:text="@string/remove_this_song"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end|center_vertical"
                android:padding="6dp"
                app:srcCompat="@drawable/ic_enter" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>