<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/llLocalFolder"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/localFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/local"
            app:srcCompat="@drawable/local_folder" />

        <TextView
            android:id="@+id/localTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/local"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCloudDrive"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/cloudDrive"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/cloud_drive"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cloud"
            tools:layout_editor_absoluteX="144dp" />

        <TextView
            android:id="@+id/cloudDriveTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/cloud_drive"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llFavorite"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/like"
            app:srcCompat="@drawable/ic_love" />

        <TextView
            android:id="@+id/tvFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/like"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llPlayHistory"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/ivPlayHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/history"
            app:srcCompat="@drawable/ic_history" />

        <TextView
            android:id="@+id/playHistoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/history"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>


</LinearLayout>